Right aligned dates and updated quote.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       <a href="https://github.com/Sequence-94">github.com/Sequence-94</a>
     </p>
     <p class="quote">
-      "Don't aspire to make a LIVING, aspire to make a DIFFERENCE."
+      "Success is not final, failure is not fatal: It is the courage to continue
+      that counts."- Winston Churchill
     </p>
 
     <h2>PROFESSIONAL SUMMARY</h2>
@@ -48,7 +49,7 @@
     <hr />
     <h3>
       UNIVERSITY OF SOUTH AFRICA
-      <p class="right">Jan. 2021 – Present</p>
+      <span class="right">Jan. 2021 – Present</span>
     </h3>
     <p>Bachelor of Science in Applied Mathematics and Computer Science</p>
     <p>Relevant Coursework</p>
@@ -65,49 +66,88 @@
     </ul>
     <h2>EXPERIENCE</h2>
     <hr />
-    <h3>Amazon Customer Service Associate
-      <p class="right">Feb.2018-Feb.2020</p>
+    <h3>
+      Amazon Customer Service Associate
+      <span class="right">Feb.2018-Feb.2020</span>
     </h3>
-    <p>Amazon Development Center <p class="right">Western Cape, CT</p></p>
+    <p>Amazon Development Center <span class="right">Western Cape, CT</span></p>
     <ul>
-      <li class="listitem">I played a critical role in delivering timely, accurate and professional customer service to Amazon customers.</li>
-      <li class="listitem">Assisted in connecting and troubleshooting Amazon specific devices(e.g Echo,Fire TV...etc) bought by customers.</li>
-      <li class="listitem">Used cutting-edge tools to navigate customer accounts, research and review policies and provide effective solutions</li>
+      <li class="listitem">
+        I played a critical role in delivering timely, accurate and professional
+        customer service to Amazon customers.
+      </li>
+      <li class="listitem">
+        Assisted in connecting and troubleshooting Amazon specific devices(e.g
+        Echo,Fire TV...etc) bought by customers.
+      </li>
+      <li class="listitem">
+        Used cutting-edge tools to navigate customer accounts, research and
+        review policies and provide effective solutions
+      </li>
     </ul>
 
     <h2>PROJECTS</h2>
     <hr />
-    <h3>eCommerce Website <a href="https://figurinestore.onrender.com/">(figurinestore.com)</a>| Python,Flask,SQLite,Render
-      <p class="right">September 2023-present</p>
+    <h3>
+      eCommerce Website
+      <a href="https://figurinestore.onrender.com/">(figurinestore.com)</a>|
+      Python,Flask,SQLite,Render
+      <span class="right">September 2023-present</span>
     </h3>
     <ul>
-      <li class="listitem">Developed a full-stack web application using Flask and Python as the sole programming language utilized
-        throughout the project.Deployed using Render</li>
-      <li class="listitem">Seamless integration of Stripe API for real payment processing</li>
-      <li class="listitem">Utilization of an SQLite database for efficient data storage and retrieval</li>
-      <li class="listitem">User registration and authentication system for secure access
+      <li class="listitem">
+        Developed a full-stack web application using Flask and Python as the
+        sole programming language utilized throughout the project.Deployed using
+        Render
+      </li>
+      <li class="listitem">
+        Seamless integration of Stripe API for real payment processing
+      </li>
+      <li class="listitem">
+        Utilization of an SQLite database for efficient data storage and
+        retrieval
+      </li>
+      <li class="listitem">
+        User registration and authentication system for secure access
       </li>
     </ul>
     <h2>CERTIFICATIONS</h2>
     <hr />
-    <h3>Amazon Web Services: </h3>
+    <h3>Amazon Web Services:</h3>
     <ul>
-      <li class="listitem">AWS Certified Cloud Practitioner (CLF)/Validation Number:G0SNW28161VQ16C7</li>
+      <li class="listitem">
+        AWS Certified Cloud Practitioner (CLF)/Validation
+        Number:G0SNW28161VQ16C7
+      </li>
     </ul>
-
 
     <h3>DeepLearning.AI:</h3>
     <ul>
       <li class="listitem">
-        Neural Networks and Deep Learning / Validation Link: <a href="https://coursera.org/verify/LG4URABNHEUH">https://coursera.org/verify/LG4URABNHEUH</a>
+        Neural Networks and Deep Learning / Validation Link:
+        <a href="https://coursera.org/verify/LG4URABNHEUH"
+          >https://coursera.org/verify/LG4URABNHEUH</a
+        >
       </li>
     </ul>
 
     <h2>TECHNICAL SKILLS</h2>
-    <hr/>
-    <h3>Languages:<p class="skills">C++,Matlab,Python,HTML,CSS,JavaScript,SQL,SQLite</p></h3>
-    <h3>Frameworks:<p class="skills">Qt,Bootstrap,jQuery,Express,MongoDB,Flask</p></h3>
-    <h3>Developer Tools and Libraries:<p class="skills">Visual Studio Code, Pycharm, Git, Github, Git Bash, Node.js, Mongoose, Studio 3T,
-      Postman, Pandas, BeautifulSoup, Selenium, Jinja, SQLAlchemy, Matplotlib, Numpy, Flask</p></h3>
+    <hr />
+    <h3>
+      Languages:
+      <p class="skills">C++,Matlab,Python,HTML,CSS,JavaScript,SQL,SQLite</p>
+    </h3>
+    <h3>
+      Frameworks:
+      <p class="skills">Qt,Bootstrap,jQuery,Express,MongoDB,Flask</p>
+    </h3>
+    <h3>
+      Developer Tools and Libraries:
+      <p class="skills">
+        Visual Studio Code, Pycharm, Git, Github, Git Bash, Node.js, Mongoose,
+        Studio 3T, Postman, Pandas, BeautifulSoup, Selenium, Jinja, SQLAlchemy,
+        Matplotlib, Numpy, Flask
+      </p>
+    </h3>
   </body>
 </html>
